[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Rooms/Generators/GeneratorDodgePuzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/HUD/MainUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/RoomSwitch.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Rooms/Generators/GeneratorDodge.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Rooms/Generators/GeneratorFight.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Rooms/Generators/GeneratorBoss.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/ScenesTransitions/SceneTransition.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Power-ups/Ancestors/AncestorGenerator.tscn" type="PackedScene" id=9]

[node name="Main" type="Node"]
script = ExtResource( 4 )
player = ExtResource( 3 )
ui = ExtResource( 2 )

[node name="GeneratorDodge" parent="." instance=ExtResource( 5 )]

[node name="GeneratorFight" parent="." instance=ExtResource( 6 )]

[node name="GeneratorDodgePuzzle" parent="." instance=ExtResource( 1 )]

[node name="GeneratorBoss" parent="." instance=ExtResource( 7 )]

[node name="AncestorGenerator" parent="." instance=ExtResource( 9 )]

[node name="SceneTransition" parent="." instance=ExtResource( 8 )]
layer = 2

[connection signal="transitionned" from="SceneTransition" to="." method="_on_SceneTransition_transitionned"]
